devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdr-public-fe
spec:
  selector:
    app: tdr-public-fe
  ports:
  - port: 80
